Tue Nov 24 16:12:33 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (resp_text_code): accepts response codes without
	  text.  backported from trunk.  [ruby-core:24194]

Tue Nov 24 16:09:41 2009  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (getaddress): rescue exceptions.  [ruby-dev:39451]

Tue Nov 24 15:51:07 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* ext/curses/curses.c: Many functions of module Curses could cause a
	  crash if the ncurses library was not properly initialized.
	  Fix pointed out by Alexander Beisig [ruby-core:22592]
	  Functions fixed: attroff, attron, attrset, bkgd, bkgdset,
	  can_change_color, close_screen, closed, color_content, curs_set,
	  def_prog_mode, delch, deleteln, getmouse, getstr, has_colors,
	  init_color, init_pair, insertln, keyname, mouseinterval, mousemask,
	  pair_content, pair_number, reset_prog_mode, resizeterm, scrl,
	  setscrreg, standend, standout, start_color, timeout, ungetmouse

Fri Nov 20 15:49:59 2009  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::DNS.bind_random_port): bind to "::" for IPv6.
	  (Resolv::DNS::ConnectedUDP#initialize): specify is_ipv6 argument of
	  bind_random_port.
	  [ruby-core:25970]

Thu Nov 19 18:03:31 2009  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi.rb (CGI.unescapeHTML): fix for hex values 80-FF,
	  single-byte hex entity encodings from 80-FF are valid HTML.
		[ruby-core:25702]

Thu Nov 19 15:34:40 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_fptr_finalize): free fptr to avoid memory leaks.
	  fixed: #2009   [ruby-core:25173] [ruby-dev:39410]

Thu Nov 19 15:27:17 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/net/http.rb (transport_request): Handle timeout error by
	  closing socket if exception raised. [ruby-core:20976]

Wed Nov 18 14:14:38 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* ext/openssl/ossl_config.c (ossl_config_add_value_m,